--- a/portfolio-react/src/index.css
+++ b/portfolio-react/src/index.css
@@ -202,3 +202,28 @@
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
   }
 }
+
+@keyframes rainbow {
+  0%, 100% {
+    color: #ff0000;
+  }
+  16% {
+    color: #ff7f00;
+  }
+  33% {
+    color: #ffff00;
+  }
+  50% {
+    color: #00ff00;
+  }
+  66% {
+    color: #0000ff;
+  }
+  83% {
+    color: #4b0082;
+  }
+}
+
+.rainbow-text {
+  animation: rainbow 3s infinite;
+}
